CMAKE_MINIMUM_REQUIRED( VERSION 3.2 )

SET( CMAKE_BUILD_TYPE Debug )

SET( CMAKE_CXX_STANDARD          11 )
SET( CMAKE_CXX_STANDARD_REQUIRED ON )


PROJECT( "gl_tut" )


FIND_PACKAGE( SDL2 REQUIRED )
FIND_PACKAGE( glew REQUIRED )
FIND_PACKAGE( glm  REQUIRED )

FIND_LIBRARY( SDL2_IMAGE_LIBRARY SDL2_image )

INCLUDE_DIRECTORIES(
    ${SDL2_INCLUDE_DIR}
    ${GLEW_INCLUDE_DIRS}
    ${GLM_INCLUDE_DIRS}
)


ADD_EXECUTABLE(
    ${PROJECT_NAME}
    src/main.cpp
)

TARGET_LINK_LIBRARIES( ${PROJECT_NAME}
    ${SDL2_LIBRARIES}
    ${SDL2_IMAGE_LIBRARY}
    ${GLEW_LIBRARIES}
    ${GLM_LIBRARIES}
    "-framework OpenGL"
)
